--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                           src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png"
                         />
                     </a>
-                    <a href="https://twitter.com/JoaqunH22941137?t=6sD5FHON7lmznYR5T-p3SQ&s=09">
+                    <a href="https://twitter.com/JesusHe81610568">
                         <img
                           src="https://cdn-icons-png.flaticon.com/512/3256/3256013.png"
                         />
                     </a>
-                    <a href="https://www.facebook.com/profile.php?id=100051398132895&mibextid=ZbWKwL">
+                    <a href="https://www.facebook.com/jesus.hernandezdzul?mibextid=ZbWKwL">
                         <img
                           src="https://cdn-icons-png.flaticon.com/512/733/733547.png"
                         />
