Nuev_index.html

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
                 </div>
                 <hr>
                 <div>
-                    <a href="https://instagram.com/hdezzz_jhd?igshid=ZDdkNTZiNTM=">
+                    <a href="#">
                         <img
                           src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png"
                         />
                     </a>
-                    <a href="https://twitter.com/JesusHe81610568">
+                    <a href="#">
                         <img
                           src="https://cdn-icons-png.flaticon.com/512/3256/3256013.png"
                         />
                     </a>
-                    <a href="https://www.facebook.com/jesus.hernandezdzul?mibextid=ZbWKwL">
+                    <a href="#">
                         <img
                           src="https://cdn-icons-png.flaticon.com/512/733/733547.png"
                         />
